# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/image_framework/ide/image_decode_config.gni")

import("//foundation/multimedia/image_framework/ide/image_decode_config.gni")

config("dng_exceptions_config") {
  cflags_cc = [ "-fexceptions" ]
}

ohos_shared_library("image_accessor") {
  if (!use_clang_android && !use_clang_ios) {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      cfi_vcall_icall_only = true
      debug = false
    }
  }

  include_dirs = [
    "${image_subsystem}/frameworks/innerkitsimpl/accessor/include",
    "${image_subsystem}/frameworks/innerkitsimpl/accessor/include/dng",
    "${image_subsystem}/interfaces/innerkits/include",
    "${image_subsystem}/frameworks/innerkitsimpl/utils/include",
    "${image_subsystem}/plugins/common/libs/image/libextplugin/include",
    "${image_subsystem}/plugins/common/libs/image/libextplugin/include/heif_impl/heif_parser",
    "${image_subsystem}/plugins/manager/include/image",
  ]

  sources = [
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/abstract_exif_metadata_accessor.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/buffer_metadata_stream.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/data_buf.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/dng_exif_metadata_accessor.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/dng/dng_exif_metadata.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/dng/dng_sdk_helper.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/dng/dng_sdk_info.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/exif_metadata.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/metadata.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/exif_metadata_formatter.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/file_metadata_stream.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/heif_exif_metadata_accessor.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/jpeg_exif_metadata_accessor.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/metadata_accessor_factory.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/png_exif_metadata_accessor.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/png_image_chunk_utils.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/tiff_parser.cpp",
      "${image_subsystem}/frameworks/innerkitsimpl/accessor/src/webp_exif_metadata_accessor.cpp",
  ]
  
  cflags = [
    "-DIMAGE_COLORSPACE_FLAG",
    "-O3",
  ]

  configs = [
    ":dng_exceptions_config",
  ]

  deps = [
      "${image_subsystem}/plugins/common/libs/image/libextplugin:heifparser",
      "${image_subsystem}/frameworks/innerkitsimpl/utils:image_utils",
  ]

    external_deps = [
      "c_utils:utils",
      "graphic_2d:color_manager",
      "hilog:libhilog",
      "libexif:libexif",
      "zlib:libz",
      "skia:dng_sdk",
      "graphic_surface:surface",
    ]

  output_name = "libimage_accessor"
  subsystem_name = "multimedia"
  part_name = "image_framework"
  version_script = "libimage_accessor.versionscript"
}